@@ -256,4 +256,11 @@ zone "inaczsk2.example" {
 	auto-dnssec maintain;
 };
 
+zone "inaczsk3.example" {
+	type master;
+	file "inaczsk3.example.db";
+	allow-update { any; };
+	auto-dnssec maintain;
+};
+
 include "trusted.conf";
